Reformat codes